--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#1a1a1a" />
     <title>WarriorMomma</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <!-- Optional: You can replace /vite.svg with a custom WarriorMomma icon -->
